# nixvm-old

./: CMakeLists.txt  compile.sh  flake.nix
src/: CMakeLists.txt  ast.hpp  main.cpp  parser.cpp  parser.hpp
